<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TabletPOS</string>
    <string name="developer_name">Masahiro Kawato</string>
    <string name="action_settings">Settings</string>
    <string name="back">Back</string>
    <string name="update">Update</string>
    <string name="currency">Rs.</string>
    <string name="title_activity_main_menu">TabletPOS</string>
    <string name="title_activity_order">Order</string>
    <string name="title_activity_confirm">Confirm</string>
    <string name="title_activity_receipt">Receipt</string>
    <string name="title_activity_loading">Loading</string>
    <string name="title_activity_loading_file_picker">Import Loading File</string>
    <string name="title_activity_stock">Stock</string>
    <string name="title_dialog_order_input">Order Input</string>
    <string name="title_dialog_credit_input">Credit Input</string>
    <string name="enter_order">Enter Order</string>
    <string name="enter_loading">Enter Loading</string>
    <string name="edit_receipt">Edit Receipt</string>
    <string name="loading">Loading</string>
    <string name="stock">Stock</string>
    <string name="import_loading">Import</string>
    <string name="about">About</string>
    <string name="clear_all">Clear All</string>
    <string name="loaded">Loaded</string>
    <string name="topmenu">Top Menu</string>
    <string name="loading_sheet_number">Loading Sheet Number</string>
    <string name="enter">Enter</string>
    <string name="category">Category</string>
    <string name="order">Order</string>
    <string name="confirm">Confirm</string>
    <string name="receipt">Receipt</string>
    <string name="export">Save to Excel</string>
    <string name="complete">Complete</string>
    <string name="route">Route</string>
    <string name="place">Shop</string>
    <string name="product">Product</string>
    <string name="unit_price">Unit Price\nwith Vat</string>
    <string name="unit_price_box">Box Price\nwith Vat</string>
    <string name="quantity">Quantity</string>
    <string name="quantity_label">Quantity:</string>
    <string name="order_checked">Order</string>
    <string name="amount">Amount</string>
    <string name="total_price">Total Price</string>
    <string name="date_label">Date:</string>
    <string name="route_label">Route:</string>
    <string name="place_label">Shop:</string>
    <string name="product_label">Product:</string>
    <string name="loading_sheet_number_label">Loading Sheet Number:</string>
    <string name="total_amount_label">Total Amount:</string>
    <string name="credit_amount_label">Credit Amount:</string>
    <string name="cash_amount_label">Cash Amount:</string>
    <string name="product_image">Product Image</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_receipt_edit">ReceiptEdit</string>

</resources>
