<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center_vertical"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="5dp" >
    
    <TextView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingLeft="30dp"
        android:textColor="@android:color/black"
        android:text="@string/product"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@android:color/black"
        android:text="@string/unit_price"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@android:color/black"
        android:text="@string/unit_price_box"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@android:color/black"
        android:text="@string/quantity"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@android:color/black"
        android:text="@string/amount"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</LinearLayout>
