<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
    
    <!-- loading sheet number -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="10dp"
   		    android:text="@string/loading_sheet_number_label"
   		    android:textAppearance="?android:attr/textAppearanceMedium" />
	    <TextView
	        android:id="@+id/loading_sheet_number"
	        android:layout_width="120dp"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="7dp"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <!-- Route and place -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/text_route"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="10dp"
            android:text="@string/route"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/spn_route"
            android:layout_width="350dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/text_place"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:paddingRight="10dp"
            android:text="@string/place"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/spn_place"
            android:layout_width="250dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <!--  Attribute labels -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal"
        android:gravity="center_vertical" >

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/product"
            android:textSize="14sp" />
        
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/unit_price"
            android:textSize="14sp" />

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/unit_price_box"
            android:textSize="14sp" />       

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/stock"
            android:textSize="14sp" />       

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:paddingLeft="20dp"
            android:text="@string/quantity"
            android:textSize="14sp" />

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/amount"
            android:textSize="14sp" />

    </LinearLayout>
    
    <View 
        android:layout_width="match_parent" 
        android:layout_height="2dp"
        android:background="@android:color/darker_gray" />
  
</LinearLayout>
