<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <!-- loading sheet number -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="10dp"
   		    android:text="@string/loading_sheet_number"
   		    android:textAppearance="?android:attr/textAppearanceMedium" />
	    <EditText
	        android:id="@+id/loading_sheet_number"
	        android:layout_width="120dp"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="7dp"
            android:inputType="numberDecimal"
            android:imeOptions="actionGo" />
        <Button
            android:id="@+id/btn_enter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/enter" />
    </LinearLayout>

    <!-- route and place selection -->
    <TableLayout
    	android:layout_width="match_parent"
   		android:layout_height="match_parent"
   		android:layout_marginTop="10dp" >
   		<TableRow>
   		    <TextView
   		        android:id="@+id/text_route"
   		        android:layout_width="wrap_content"
   		        android:layout_height="wrap_content"
   		        android:paddingRight="10dp"
   		        android:text="@string/route"
   		        android:textAppearance="?android:attr/textAppearanceMedium" />
   		    <Spinner
   		        android:id="@+id/spn_route"
   		        android:layout_width="wrap_content"
   		        android:layout_height="wrap_content" />
   		</TableRow>

   		<TableRow>
   		    <TextView
   		        android:id="@+id/text_place"
   		        android:layout_width="wrap_content"
   		        android:layout_height="wrap_content"
   		        android:paddingRight="10dp"
   		        android:text="@string/place"
   		        android:textAppearance="?android:attr/textAppearanceMedium" />
   		    <Spinner
   		        android:id="@+id/spn_place"
   		        android:layout_width="wrap_content"
   		        android:layout_height="wrap_content" />
   		</TableRow>

   		<TableRow>
   		    <TextView
   		        android:layout_width="wrap_content"
   		        android:layout_height="wrap_content"
   		        android:paddingRight="10dp"
   		        android:text="@string/category"
   		        android:textAppearance="?android:attr/textAppearanceMedium" />
   		    <Spinner
   		        android:id="@+id/spn_category"
   		        android:layout_width="wrap_content"
   		        android:layout_height="wrap_content" />
   		</TableRow>
	</TableLayout>
    		
    <!-- Attribute labels -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/product"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/unit_price"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/quantity"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/unit_price_box"
            android:textAppearance="?android:attr/textAppearanceSmall" />       

        <TextView
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/quantity_box"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/amount"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </LinearLayout>

    <View 
      android:layout_width="match_parent" 
      android:layout_height="2dp"
      android:background="@android:color/darker_gray" />
    
</LinearLayout>
