<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <View 
        android:layout_width="match_parent" 
        android:layout_height="2dp"
        android:layout_marginBottom="20dp"
        android:background="@android:color/darker_gray" />

    <!-- Total amount and credit-->
    <TableLayout
    	android:layout_width="match_parent"
   		android:layout_height="wrap_content"
   		android:layout_marginLeft="10dp" >
  	    <TableRow>
  	        <TextView
  	            android:layout_width="wrap_content"
  	            android:layout_height="wrap_content"
  	            android:text="@string/total_amount_label"
  	            android:textAppearance="?android:attr/textAppearanceMedium" />
  	        <TextView
  	            android:id="@+id/total_amount"
  	            android:layout_width="wrap_content"
  	            android:layout_height="wrap_content"
  	            android:layout_marginLeft="7dp"
  	            android:textAppearance="?android:attr/textAppearanceMedium" /> 	        
  	    </TableRow>

  	    <TableRow>
  	        <TextView
  	            android:layout_width="wrap_content" 
  	            android:layout_height="wrap_content"
  	            android:text="@string/credit_amount_label"
  	            android:textAppearance="?android:attr/textAppearanceMedium" />
  	        <EditText
                android:id="@+id/credit_amount"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="7dp"
                android:inputType="numberDecimal"
                android:imeOptions="actionGo"
                android:textSize="16sp"
                android:gravity="center" />
  	        <TextView
  	            android:layout_width="wrap_content" 
  	            android:layout_height="wrap_content"
                android:layout_marginLeft="7dp"
  	            android:text="@string/currency"
  	            android:textAppearance="?android:attr/textAppearanceMedium" />
  	        <Button
  	            android:id="@+id/btn_update"
  	            android:layout_width="wrap_content"
  	            android:layout_height="wrap_content"
  	            android:layout_marginLeft="10dp"
  	            android:paddingLeft="20dp"
  	            android:paddingRight="20dp"
  	            android:text="@string/update" />
  	    </TableRow>
	
  	    <TableRow>
  	        <TextView
  	            android:layout_width="wrap_content"
  	            android:layout_height="wrap_content"
  	            android:text="@string/cash_amount_label"
  	            android:textAppearance="?android:attr/textAppearanceMedium" />
  	        <TextView
  	            android:id="@+id/cash_amount"
  	            android:layout_width="wrap_content"
  	            android:layout_height="wrap_content"
  	            android:layout_marginLeft="7dp"
  	            android:textAppearance="?android:attr/textAppearanceMedium" /> 	        
  	    </TableRow>
   	</TableLayout>

    <!-- "Order" and "Receipt" buttons -->
    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" >
    
        <Button
            android:id="@+id/btn_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="20dp"
            android:drawableLeft="@drawable/arrow_left"
            android:paddingLeft="10dp"
            android:paddingRight="20dp"
            android:drawablePadding="10dp"
            android:text="@string/order" />

        <Button
            android:id="@+id/btn_receipt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            android:drawableLeft="@drawable/arrow_right"
            android:paddingLeft="10dp"
            android:paddingRight="20dp"
            android:drawablePadding="10dp"
            android:text="@string/receipt" />
    </RelativeLayout>
</LinearLayout>