<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    android:orientation="vertical" >

    <View 
        android:layout_width="match_parent" 
        android:layout_height="2dp"
        android:background="@android:color/darker_gray" />
    
    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
   		        android:textColor="@android:color/black"
                android:text="@string/total_amount_label"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/total_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="7dp"
   		        android:textColor="@android:color/black"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
   		        android:textColor="@android:color/black"
                android:text="@string/credit_amount_label"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/credit_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="7dp"
   		        android:textColor="@android:color/black"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
   		        android:textColor="@android:color/black"
                android:text="@string/cash_amount_label"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/cash_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="7dp"
   		        android:textColor="@android:color/black"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </TableRow>
</TableLayout>
</LinearLayout>
